# gohumanloop

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README-zh.md  README.md  pyproject.toml
apiservices/: README.md
apiservices/mock/: Dockerfile  README.md  mock.py  requirements.txt
examples/: basic_usage.py  crewai_integration.py  email_provider.py  langgraph_adapter_conversation_example.py  langgraph_adapter_example.py  langgraph_adapter_example1.py  langgraph_adapter_interrupt.py  langgraph_integration.py  langgraph_simple_ghl.py  langgraph_simple_ghl_async.py  terminal_provider_example.py  websocket_provider.py
examples/agentops/: agentops_callback.py
examples/langgraph/: langgraph_adapter_callback.py  langgraph_adapter_conversation_example.py  langgraph_adapter_example.py  langgraph_adapter_interrupt.py  langgraph_adapter_mutilprovider.py  langgraph_simple_ghl.py  langgraph_simple_ghl_async.py
examples/provider/: api_provider_mock.py  email_provider_example.py  terminal_provider_example.py
gohumanloop/: __init__.py
gohumanloop/adapters/: base_adapter.py  crewai_adapter.py  langgraph_adapter.py
gohumanloop/config/: settings.py
gohumanloop/core/: interface.py  manager.py
gohumanloop/manager/: ghl_manager.py
gohumanloop/models/: glh_model.py
gohumanloop/providers/: api_provider.py  base.py  email_provider.py  ghl_provider.py  terminal_provider.py  websocket_provider.py
gohumanloop/utils/: __init__.py  context_formatter.py  polling.py  threadsafedict.py  utils.py
test/: test.py
tests/unit/adapters/: __init__.py  (+2 more)
(+13 files in other folders)
