[project]
name = "gohumanloop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.30",
    "pytest>=8.3.5",
]
