[project]
name = "gohumanloop"
version = "0.1.0"
description = "Perfecting AI workflows with human intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "click>=8.1.8",
    "dotenv>=0.9.9",
]

[project.urls]
repository = "https://github.com/ptonlix/gohumanloop"

[project.scripts]
ghl = "gohumanloop.cli.main:cli"
gohumanloop = "gohumanloop.cli.main:cli"

[project.optional-dependencies]
email = [
    "imapclient>=3.0.1",
]

[tool.setuptools]
packages = ["gohumanloop"]

[dependency-groups]
dev = [
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.30",
    "pytest>=8.3.5",
]
